Bug 408696 - Cut as first entry in the right click menu for vector shapes causes problems
Summary: Cut as first entry in the right click menu for vector shapes causes problems
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Vector (other bugs)
Version First Reported In: 4.2.1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-14 15:28 UTC by kaisaki1342
Modified: 2019-06-20 10:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kaisaki1342 2019-06-14 15:28:58 UTC
SUMMARY
This is not really a bug perse, more on UX issue. 
My problem is sometimes when clicking mostly with mouse/ also happens in pen stylus. quickly with right click , it accidentally selects cut as it is the first entry. 
So the shape is cut and you need to undo to get it back its annoying. 


STEPS TO REPRODUCE
1. Add vector shape
2. Right click... 
3. 
https://youtu.be/egE1JpnOCl8

OBSERVED RESULT
Shapes accidentally gets cut/deleted. 

EXPECTED RESULT
Maybe reposition it, one should not be accidentally removing the shapes when right clicking. 

SOFTWARE/OS VERSIONS
Windows: Win 10 Pro 1809
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Halla Rempt 2019-06-14 15:37:08 UTC
Yes, I agree here.
Comment 2 Ahab Greybeard 2019-06-15 13:57:21 UTC
I've just accidentally deselected a selection in that way and it can probably happen with other right-click option. One possibility would be a null/blank option at the top of every list of options.
Comment 3 Halla Rempt 2019-06-17 08:21:57 UTC
Git commit 9f76e8705f259c2462b27eb5672b04964ca04023 by Boudewijn Rempt.
Committed on 17/06/2019 at 08:20.
Pushed by rempt into branch 'master'.

Make the transform menu the first entry in the vector tool popup menu

This is safe, since it's a menu with submenus, so clicking doesn't
do anything.

M  +21   -19   plugins/tools/defaulttool/defaulttool/DefaultTool.cpp

https://invent.kde.org/kde/krita/commit/9f76e8705f259c2462b27eb5672b04964ca04023
Comment 4 Halla Rempt 2019-06-17 08:31:39 UTC
Git commit cce412a9ba7b0d99199e4aac15b34159defb1eea by Boudewijn Rempt.
Committed on 17/06/2019 at 08:30.
Pushed by rempt into branch 'master'.

Add a section title and a separator all tool right-click menus

This prevents accidental clicking on the first entry and looks a
bit better, too.

M  +3    -0    libs/ui/tool/kis_selection_tool_helper.cpp
M  +4    -0    plugins/tools/defaulttool/defaulttool/DefaultTool.cpp
M  +3    -0    plugins/tools/tool_crop/kis_tool_crop.cc
M  +2    -0    plugins/tools/tool_transform2/kis_tool_transform.cc

https://invent.kde.org/kde/krita/commit/cce412a9ba7b0d99199e4aac15b34159defb1eea
Comment 5 Halla Rempt 2019-06-20 10:49:20 UTC
Git commit 3d31afe6f418b9a91a0ad06c439059989203612e by Boudewijn Rempt.
Committed on 20/06/2019 at 10:31.
Pushed by rempt into branch 'krita/4.2'.

Make the transform menu the first entry in the vector tool popup menu

This is safe, since it's a menu with submenus, so clicking doesn't
do anything.

M  +21   -19   plugins/tools/defaulttool/defaulttool/DefaultTool.cpp

https://invent.kde.org/kde/krita/commit/3d31afe6f418b9a91a0ad06c439059989203612e
Comment 6 Halla Rempt 2019-06-20 10:49:28 UTC
Git commit c08a3189844f1d17ad136fb999835d894d3b38ee by Boudewijn Rempt.
Committed on 20/06/2019 at 10:31.
Pushed by rempt into branch 'krita/4.2'.

Add a section title and a separator all tool right-click menus

This prevents accidental clicking on the first entry and looks a
bit better, too.

M  +3    -0    libs/ui/tool/kis_selection_tool_helper.cpp
M  +4    -0    plugins/tools/defaulttool/defaulttool/DefaultTool.cpp
M  +3    -0    plugins/tools/tool_crop/kis_tool_crop.cc
M  +2    -0    plugins/tools/tool_transform2/kis_tool_transform.cc

https://invent.kde.org/kde/krita/commit/c08a3189844f1d17ad136fb999835d894d3b38ee