Make the transform menu the first entry in the vector tool popup menu

This is safe, since it's a menu with submenus, so clicking doesn't
do anything.

BUG:408696